--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -14,3 +14,8 @@ swipe_threshold 0
 gesture swipe right 3 _internal ws_up -w
 gesture swipe left 3 _internal ws_down -w
 gesture swipe up 3 wmctrl -r :ACTIVE: -b toggle,maximized_horz,maximized_vert
+gesture swipe right 4 xdotool key control+bracketright
+gesture swipe left 4 xdotool key control+bracketleft
+gesture swipe down 4 xdotool key control+w
+gesture swipe up 4 xdotool key control+t
+gesture swipe down 3 xdotool key "Escape"
