--- a/alacritty.yml
+++ b/alacritty.yml
@@ -40,68 +40,7 @@ font:
 draw_bold_text_with_bright_colors: true
 # }}}
 
-# # {{{ Colors from purify
-# selection:
-#   text:       '0xFAFAFA'
-#   background: '0x252834'
-
-# primary:
-#   background: '0x313440'
-#   foreground: '0xFAFAFA'
-# normal:
-#   black:   '0x282C34'
-#   red:     '0xFF6059'
-#   green:   '0x5FFF87'
-#   yellow:  '0xFFFF87'
-#   blue:    '0x5FAFFF'
-#   magenta: '0xAF87FF'
-#   cyan:    '0x5FAFFF'
-#   white:   '0xFAFAFA'
-
-# bright:
-#   black:   '0x282C34'
-#   red:     '0xFF6059'
-#   green:   '0x5FFF87'
-#   yellow:  '0xFFFF87'
-#   blue:    '0x5FAFFF'
-#   magenta: '0xAF87FF'
-#   cyan:    '0x5FAFFF'
-#   white:   '0xFAFAFA'
-# # }}}
-
-# {{{ Old colors
-#colors:
-#  primary:
-#    background: '#2c2c2c'
-#    foreground: '#dcdcdc'
-#
-#  selection:
-#    text: '0x282a36'
-#    background: '0xbbc5ff'
-#
-#  normal:
-#    black:   '0x282a36'
-#    red:     '0xf07178'
-#    green:   '0xc3e88d'
-#    yellow:  '0xffcb6b'
-#    blue:    '0x82aaff'
-#    magenta: '0xc792ea'
-#    cyan:    '0x89ddff'
-#    white:   '0xd0d0d0'
-#
-#  bright:
-#    black:   '0x434758'
-#    red:     '0xff8b92'
-#    green:   '0xddffa7'
-#    yellow:  '0xffe585'
-#    blue:    '0x9cc4ff'
-#    magenta: '0xe1acff'
-#    cyan:    '0xa3f7ff'
-#    white:   '0xffffff'
-# }}}
-
-#{{{
-# Colors (Dracula)
+#{{{ Colors - Dracula
 colors:
   # Default colors
   primary:
@@ -156,7 +95,7 @@ colors:
   indexed_colors: []
 #}}}
 
-background_opacity: 0.90
+background_opacity: 0.85
 
 dynamic_title: true
 
