--- a/alacritty.yml
+++ b/alacritty.yml
@@ -4,7 +4,7 @@ env:
 # {{{ Window
 window:
   dimensions:
-    columns: 75
+    columns: 85
     lines: 30
   padding:
     x: 6
@@ -20,20 +20,33 @@ scrolling:
   history: 5000
 
 # {{{ Fonts
+# font:
+#   normal:
+#     family: monofur for PowerLine
+#     style: Regular
+#   bold:
+#     family: monofur for PowerLine
+#     style: Bold
+#   italic:
+#     family: monofur for PowerLine
+#     style: Italic
+#   bold_italic:
+#     family: monofur for PowerLine
+#     style: Bold Italic
 font:
   normal:
-    family: monofur for PowerLine
+    family: FantasqueSansMono Nerd Font Mono
     style: Regular
   bold:
-    family: monofur for PowerLine
+    family: FantasqueSansMono Nerd Font Mono
     style: Bold
   italic:
-    family: monofur for PowerLine
+    family: FantasqueSansMono Nerd Font Mono
     style: Italic
   bold_italic:
-    family: monofur for PowerLine
+    family: FantasqueSansMono Nerd Font Mono
     style: Bold Italic
-  size: 10.0
+  size: 12.0
   offset:
     x: 1
     y: 1
@@ -97,7 +110,7 @@ colors:
 
 background_opacity: 0.85
 
-dynamic_title: true
+window.dynamic_title: true
 
 unfocused_hollow: true
 
