--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,14 +1,19 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "html", "yaml",  "json", "python, tex"],
-
-  // python config
-  "python.linting.enabled": true,
-  "python.linting.pylintEnabled": true,
-
-  "snippets.ultisnips.directories":
-  [
-    "UltiSnips",
-    "~/.config/nvim/UltiSnips"
-  ]
-
+	"coc.preferences.formatOnSaveFiletypes": [
+		"css",
+		"markdown",
+		"html",
+		"yaml",
+		"json",
+		"python",
+		"tex",
+		"latex"
+	],
+	"python.linting.enabled": true,
+	"python.linting.pylintEnabled": true,
+	"python.autoComplete.addBrackets": true,
+	"snippets.ultisnips.directories": [
+		"UltiSnips",
+		"~/.config/nvim/UltiSnips"
+	]
 }
