Arquivos novos de configuração e scripts

--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -1,4 +1,4 @@
-# For the benefit of emacs users: -*- shell-script -*-
+# For the benefit of emacs users: -*- shell-script -*-{{{
 ###########################
 # xbindkeys configuration #
 ###########################
@@ -36,8 +36,9 @@
 #keystate_numlock = enable
 #keystate_capslock = enable
 #keystate_scrolllock= enable
+# }}}
 
-# Examples of commands:
+# Examples of commands:{{{
 
 # "xbindkeys_show" 
 #   control+shift + q
@@ -50,27 +51,35 @@
 # "xterm"
 #   control + b:2
 
-"/usr/bin/xte 'key Super_L' &"
-  b:2 + Release
-
-"alacritty"
-    alt + y
-
 #"xterm -geom 50x20+20+20"
 #   Shift+Mod2+alt + s
-#
+
 ## set directly keycode (here control+alt+mod2 + f with my keyboard)
 #"xterm"
 #  alt + c:0x29 + m:4 + mod2
-#
+
 ## Control+Shift+a  release event starts rxvt
 #"rxvt"
 #  release+control+shift + a
-#
+
 ## Control + mouse button 2 release event starts rxvt
 #"rxvt"
 #  Control + b:2 + Release
 
+# }}}
+
+"/usr/bin/xte 'key Super_L' &"
+  b:2 + Release
+
+"rofi -show drun"
+  alt + space
+
+# Não funciona no gnome, que captura o mod4
+# "alacritty"
+#   mod4 + space
+
+# "/usr/bin/xdotool 'type ç'"
+#  Multi_key + c
 ##################################
 # End of xbindkeys configuration #
 ##################################
