--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -108,6 +108,61 @@ colors:
   indexed_colors: []
 #}}}
 
+##{{{ Colors - Custom
+#colors:
+#  # Default colors
+#  primary:
+#    background: '#002b36'
+#    foreground: '#839496'
+
+#  crsor:
+#    text: '#839496'
+#    cursor: '#c909db'
+
+#  # Normal colors
+#  normal:
+#    black:   '#073642'
+#    red:     '#dc322f'
+#    green:   '#859900'
+#    yellow:  '#b58900'
+#    blue:    '#268bd2'
+#    magenta: '#d33682'
+#    cyan:    '#2aa198'
+#    white:   '#eee8d5'
+
+#  # Bright colors
+#  bright:
+#    black:   '#002b36'
+#    red:     '#cb4b16'
+#    green:   '#586e75'
+#    yellow:  '#657b83'
+#    blue:    '#839496'
+#    magenta: '#6c71c4'
+#    cyan:    '#93a1a1'
+#    white:   '#fdf6e3'
+
+#  # Dim colors
+#  # dim:
+#  #   black:   '0x14151b'
+#  #   red:     '0xff2222'
+#  #   green:   '0x1ef956'
+#  #   yellow:  '0xebf85b'
+#  #   blue:    '0x4d5b86'
+#  #   magenta: '0xff46b0'
+#  #   cyan:    '0x59dffc'
+#  #   white:   '0xe6e6d1'
+
+#  # Indexed Colors
+#  #
+#  # The indexed colors include all colors from 16 to 256.
+#  # When these are not set, they're filled with sensible defaults.
+#  #
+#  # Example:
+#  #   `- { index: 16, color: '0xff00ff' }`
+#  #
+#  indexed_colors: []
+##}}}
+
 background_opacity: 0.98
 
 window.dynamic_title: true
