--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -22,8 +22,10 @@ setw -g xterm-keys on                     # enable xterm keys
 setw -g mode-keys vi                      # enable vi mode keys
 
 bind-key Escape copy-mode
-bind-key p paste-buffer
+# bind-key p paste-buffer
+bind-key P run "tmux set-buffer \"$(termux-clipboard-get)\"; tmux paste-buffer"
 bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
