--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,6 +11,7 @@ set -g @minimal-tmux-left-arrow ""
 set -g @minimal-tmux-right false
 set -g @minimal-tmux-left false
 
+set -g update-environment "XDG_RUNTIME_DIR"
 set -g prefix C-a                         # prefix key
 set -g default-terminal "screen-256color" # terminal type
 # set -g aggressive-resize on               # aggressive resize
@@ -23,23 +24,27 @@ setw -g mode-keys vi                      # enable vi mode keys
 
 bind-key Escape copy-mode
 # bind-key p paste-buffer
-bind-key P run "tmux set-buffer \"$(termux-clipboard-get)\"; tmux paste-buffer"
+# bind-key P run "tmux set-buffer \"$(termux-clipboard-get)\"; tmux paste-buffer"
+bind-key P run "tmux set-buffer \"$(wl-paste)\"; tmux paste-buffer"
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "termux-clipboard-set"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "wl-copy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
 bind-key ! split-window -h -c "#{pane_current_path}"   # split horizontally
 bind-key - split-window -v -c "#{pane_current_path}"   # split vertically
-bind-key C-t new-window                                # open new window
-bind-key C-w kill-window                               # kill window
+bind-key C-t new-window
+bind-key C-w kill-window
 bind-key C-n next-window
 bind-key C-p previous-window
 bind-key C-a last-window
 bind-key a last-window
-bind-key r source-file ~/.config/tmux/tmux.conf    # reload tmux config
-bind-key t select-layout tiled                     # tiled layout
-bind-key b set-option status                       # show or hide statusbar
+bind-key r source-file ~/.config/tmux/tmux.conf
+bind-key t select-layout tiled
+bind-key b set-option status
 
 version_pat='s/^tmux[^0-9]*([.0-9]+).*/\1/p'
 
