--- a/.config/aider/model.settings.yaml
+++ b/.config/aider/model.settings.yaml
@@ -1,18 +1,33 @@
-- name: openai/straico:anthropic/claude-3.5-sonnet
+- name: openai/anthropic/claude-3.5-sonnet
   cache_control: false
   caches_by-default: false
   edit_format: diff
   explamples_as_sys_message: true
   extra_headers: null
   lazy: false
-  max_tokens: 8192
+  max_tokens: 32000
   reminder: user
   send_undo_reply: false
   streaming: false
   use_repo_map: true
   use_system_prompt: true
-  use_temperature: false
-  weak_model_name: openai/sambanova:Meta-Llama-3.1-405B-Instruct-8k
+  use_temperature: true
+  weak_model_name: openai/microsoft/phi-4
+- name: openai/deepseek/deepseek-r1:nitro
+  cache_control: false
+  caches_by-default: false
+  edit_format: diff
+  explamples_as_sys_message: false
+  extra_headers: null
+  lazy: false
+  max_tokens: 128000
+  reminder: user
+  send_undo_reply: false
+  streaming: false
+  use_repo_map: true
+  use_system_prompt: true
+  use_temperature: true
+  weak_model_name: openai/microsoft/phi-4
 - name: openai/sambanova:Meta-Llama-3.1-405B-Instruct-8k
   cache_control: false
   caches_by-default: false
