--- a/.config/aichat/config.yaml
+++ b/.config/aichat/config.yaml
@@ -66,6 +66,14 @@ clients:
         max_input_tokens: 8192
         supports_vision: false
         supports_function_calling: true
+      - name: Llama-3.1-Tulu-3-405B
+        max_input_tokens: 8192
+        supports_vision: false
+        supports_function_calling: true
+      - name: DeepSeek-R1-Distill-Llama-70B
+        max_input_tokens: 8192
+        supports_vision: false
+        supports_function_calling: true
   - type: openai-compatible
     name: groq
     api_base: https://api.groq.com/openai/v1
