--- a/.config/aichat/config.yaml
+++ b/.config/aichat/config.yaml
@@ -1,6 +1,5 @@
-model: local:anthropic/claude-3.5-sonnet
+model: local:anthropic/claude-3.7-sonnet
 # model: groq:llama-3.3-70b-versatile
-# model: local:qwen/qwen-2.5-coder-32b-instruct
 temperature: 0
 stream: true
 save: false
@@ -30,8 +29,12 @@ clients:
     name: local
     api_base: http://localhost:8000/v1
     models:
-      - name: anthropic/claude-3.5-sonnet
-        max_input_tokens: 120000
+      - name: anthropic/claude-3.7-sonnet
+        max_input_tokens: 150000
+        supports_vison: false
+        supports_function_calling: true
+      - name: anthropic/claude-3.7-sonnet:thinking
+        max_input_tokens: 150000
         supports_vison: false
         supports_function_calling: true
       - name: deepseek/deepseek-chat
@@ -46,15 +49,11 @@ clients:
         max_input_tokens: 120000
         supports_vison: false
         supports_function_calling: true
-      - name: qwen/qwen-2.5-coder-32b-instruct
-        max_input_tokens: 24000
-        supports_vison: false
-        supports_function_calling: true
-      - name: openai/o1
+      - name: openai/o3-mini
         max_input_tokens: 128000
         supports_vision: false
         supports_function_calling: false
-      - name: openai/o3-mini
+      - name: openai/o3-mini-high
         max_input_tokens: 128000
         supports_vision: false
         supports_function_calling: false
@@ -62,7 +61,7 @@ clients:
     name: sambanova
     api_base: https://api.sambanova.ai/v1
     models:
-      - name: Meta-Llama-3.1-405B-Instruct-8k
+      - name: DeepSeek-R1
         max_input_tokens: 8192
         supports_vision: false
         supports_function_calling: true
