--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -46,7 +46,7 @@ bind-key C-t new-window
 bind-key C-w kill-window
 bind-key C-n next-window
 bind-key C-p previous-window
-bind-key C-a last-window
+bind-key C-s last-window
 bind-key a last-window
 bind-key r source-file ~/.config/tmux/tmux.conf
 bind-key t select-layout tiled
