--- a/.config/aider/conf.yaml
+++ b/.config/aider/conf.yaml
@@ -2,13 +2,14 @@ openai-api-key: xxx
 # model: openai/anthropic/claude-3.5-sonnet
 # weak-model: openai/anthropic/claude-3.5-sonnet
 # qwen/qwen-2.5-coder-32b-instruct
-model: openai/deepseek/deepseek-r1:nitro
-editor-model: openai/anthropic/claude-3.5-sonnet
-weak-model: openai/microsoft/phi-4
+# model: openai/deepseek/deepseek-r1:nitro
+# editor-model: openai/anthropic/claude-3.5-sonnet
+# weak-model: openai/microsoft/phi-4
 openai-api-base: http://127.0.0.1:8000/v1/
 dark-mode: true
 show-model-warnings: false
 model-settings-file: /home/ricardo/.config/aider/.model.settings.yml
+model-metadata-file: /home/ricardo/.config/aider/.aider.model.metadata.json
 show-diffs: true
 subtree-only: true
 vim: true
