--- a/.config/aider/conf.yaml
+++ b/.config/aider/conf.yaml
@@ -5,6 +5,7 @@ openai-api-key: xxx
 # model: openai/deepseek/deepseek-r1:nitro
 # editor-model: openai/anthropic/claude-3.5-sonnet
 # weak-model: openai/microsoft/phi-4
+vim: true
 openai-api-base: http://127.0.0.1:8000/v1/
 dark-mode: true
 show-model-warnings: false
@@ -12,5 +13,5 @@ model-settings-file: /home/ricardo/.config/aider/.model.settings.yml
 model-metadata-file: /home/ricardo/.config/aider/.aider.model.metadata.json
 show-diffs: true
 subtree-only: true
-vim: true
 stream: false
+timeout: 180
