--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .config/nvim/lazy-lock.json
 .config/nvim/plugged/
+.config/nvim/lua/aichat.so
 .config/zsh/marlonrichert
 .config/zsh/zsh-users
 .config/tmux/plugins
