--- a/.config/aichat/config.yaml
+++ b/.config/aichat/config.yaml
@@ -78,6 +78,14 @@ clients:
         max_input_tokens: 128000
         supports_vision: false
         supports_function_calling: true
+      - name: meta-llama/llama-4-maverick-17b-128e-instruct
+        max_input_tokens: 131072
+        supports_vision: false
+        supports_function_calling: true
+      - name: qwen-qwq-32b
+        max_input_tokens: 128000
+        supports_vision: false
+        supports_function_calling: true
   - type: openai-compatible
     name: jina
     api_base: https://api.jina.ai/v1
