--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 .config/nvim/lazy-lock.json
 .config/nvim/plugged/
-.config/nvim/lua/aichat.so
 .config/zsh/marlonrichert
 .config/zsh/zsh-users
 .config/tmux/plugins
-.config/zsh/.zshrc.zwc
 .config/zsh/zhistory
 .config/aichat/functions/
 .config/aichat/sessions/
-.config/aichat/rags/straico.yaml
+.config/aichat/rags/
 *.so
 *.zwc
